--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "clipboard": "^2.0.4",
+    "ng2-tooltip-directive": "^2.1.9",
     "ngx-clipboard": "^12.2.0",
+    "ngx-tooltip": "0.0.9",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
